# genobabble

./: .gitignore  5000_assembly-stats-complete.tsv  LICENSE  README.md  assembly-stats.sampled.no_hqset.tsv  assembly-stats.sampled.tsv  compare_qc_vs_sampled.py  create_comparison_file.py  custom_comparison.tsv  hq_set.removed_samples.tsv  merge_all_stats.py  pixi.toml  pyproject.toml  strip_hqset_column.py
data/raw/processed/: assembly-stats.sampled.tsv
src/llm_qc/core/: merge.py
src/llm_qc/legacy/: Assembly_QC_Classification.csv  E_coli_QC_Predictions.csv  add_species_to_stats.py  filter_usable_failed_samples.py  sample_assembly_stats.py  usable_failed_samples.tsv
src/llm_qc/processing/: sampling.py  species.py
src/llm_qc/utils/: file_handling.py
tests/: test_file_handling.py
wasm/: index.html  presentation.html
